--- a/movie_recommendation_system.ipynb
+++ b/movie_recommendation_system.ipynb
@@ -224,6 +224,7 @@
     }
    ],
    "source": [
+    "#IMPORTANT FEATURE SELECTION\n",
     "ds = ds[['LANGUAGE','GENRE','MOVIE_NAME','ACTOR' ]]\n",
     "ds.head()"
    ]
@@ -246,10 +247,7 @@
     }
    ],
    "source": [
-    "#ds['key_words'] = \"\"\n",
-    "\n",
-    "#for index,row in ds.iterrows():\n",
-    "     #plot = row['plot']\n",
+    "#bag of words means words situated in Movie name upon which we will calculate the similarity and would recommend. \n",
     "ds['bag_of_words'] = ''\n",
     "columns = ds.columns\n",
     "for index, row in ds.iterrows():\n",
@@ -364,6 +362,7 @@
     }
    ],
    "source": [
+    "#bag_of_words COMBINES  ALL THE WORDS PRESENT IN THE ABOVE 4 COLUMNS.\n",
     "ds.head()"
    ]
   },
@@ -555,8 +554,14 @@
     }
    ],
    "source": [
+    "#A MATRIX REPRESENTING ALL BAG OF WORDS IN VECTOR FORM\n",
+    "#FROM SKLEARN FEATURE EXTRACTION USED ABOVE WE EXTRACT THE COUNT VECTORIZER.\n",
+    "#INITIATES AND GENERATES THE COUNT MATRIX\n",
     "count = CountVectorizer()\n",
     "count_matrix = count.fit_transform(ds['bag_of_words'])\n",
+    "\n",
+    "\n",
+    "#CREATES A SERIES FOR THE MOVIES_NAME SO THEY ASSOCIATES TO AN NUMERICAL ORDER\n",
     "indices = pd.Series(ds.MOVIE_NAME)\n",
     "indices[:5]\n",
     "#count_matrix\n",
@@ -586,6 +591,7 @@
     }
    ],
    "source": [
+    "#MEASURES THE COSINE SIMILARITY BETWEEN COUNT MATRIX .\n",
     "cosine_sim = cosine_similarity(count_matrix, count_matrix)\n",
     "cosine_sim"
    ]
@@ -616,43 +622,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#FUNCTION THAT TAKES MOVIE NAME AS INPUT AND RECOMMENDS TOP 10 MOVIES\n",
     "def recommendations(MOVIE_NAME, cosine_sim = cosine_sim):\n",
+    "    \n",
     "    recommended_movies = []\n",
+    "    \n",
+    "    #GETTING INDEX OF THE MOVIE THAT MATCHES THE MOVIE NAME.\n",
     "    idx = indices[indices == MOVIE_NAME].index[0]\n",
+    "    \n",
+    "    #CREATES A SERIES WITH SIMILAR SCORES IN DESCENDING ORDER\n",
     "    score_series = pd.Series(cosine_sim[idx]).sort_values(ascending = False)\n",
+    "    \n",
+    "    #GETS INDEX OF 10 MOST SIMILAR MOVIES\n",
     "    top_10_indexes = list(score_series.iloc[1:11].index)\n",
+    "    \n",
+    "    #CREATING A LIST WITH THE MOVIE NAME OF BEST 10 MATCHING MOVIES\n",
     "    for i in top_10_indexes:\n",
     "        recommended_movies.append(list(ds.MOVIE_NAME)[i])\n",
+    "        \n",
     "    return recommended_movies    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Sholay',\n",
-       " 'Amar Akbar Anthony',\n",
-       " 'Dostana',\n",
-       " 'Guru ',\n",
-       " 'Dhoom',\n",
-       " nan,\n",
-       " 'Fashion',\n",
-       " 'Race',\n",
-       " 'Bhootnath',\n",
-       " 'Dostana']"
+       "['Dilwale Dulhaniya Le Jayenge',\n",
+       " 'Chak De India',\n",
+       " 'Kabhi Alvida Na Kehna',\n",
+       " 'Main Hoon Na',\n",
+       " 'Devdas',\n",
+       " 'Kabhi Khushi Kabhi Gham',\n",
+       " 'Kuch Kuch Hota Hai',\n",
+       " 'Om Shanti Om',\n",
+       " 'Fanaa',\n",
+       " 'Rang De Basanti']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommendations('Sholay')"
+    "#WATCHED A ROMANTIC MOVIE KUCH KUCH HOTA HAI OF SHARUKH KHAN , NEXT 10 MOVIES ARE RECOMMENDED OF SHAHRUKH KHAN AND ROMANCE GENRE.\n",
+    "\n",
+    "recommendations('Kuch Kuch Hota Hai')"
    ]
   },
   {
