--- a/movie_recommendation_system.ipynb
+++ b/movie_recommendation_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "metadata": {
     "scrolled": true
    },
@@ -120,7 +120,7 @@
        "4  Jaya Bachchan   Ramesh Sippy       G.P. Sippy        1975.0  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "4   Hindi    Action           Sholay  Amitabh Bachchan"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-83-8d55d1fa3da6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'ACTOR'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m             \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwords\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwords\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-96-8d55d1fa3da6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'ACTOR'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m             \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwords\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwords\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: can only join an iterable"
      ]
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "4  H i n d i   A c t i o n S h o l a y Amitabh Ba...  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Romance         39\n",
+       "Drama           30\n",
+       "Action          28\n",
+       "Comedy          24\n",
+       "Biographical     8\n",
+       "Thriller         7\n",
+       "Horror           7\n",
+       "Sport            3\n",
+       "War              2\n",
+       "Historical       2\n",
+       "Name: GENRE, dtype: int64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#it calculates the genre popularity.\n",
+    "\n",
+    "genre_popularity = (ds.GENRE.explode().value_counts().sort_values(ascending=False))\n",
+    "genre_popularity.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +415,7 @@
        "Name: MOVIE_NAME, dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +454,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +477,7 @@
        "(180, 180)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +534,7 @@
        " 'Rang De Basanti']"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,6 +544,33 @@
     "\n",
     "recommendations('Kuch Kuch Hota Hai')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-103-415d79347436>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-103-415d79347436>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    sns.countplot(rating['Rating'].median()))\u001b[0m\n\u001b[1;37m                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(10,6))\n",
+    "sns.set(rc={'axes.facecolor':'white', 'figure.facecolor':'white'})\n",
+    "sns.countplot(rating['Rating'].median()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
